tests/spec/fail/interface_duplicate_method.aja
interface Speaker:
    speak(prefix: str) -> str
    speak(prefix: str) -> str
